NT/ds/security/cryptoapi/pkitrust/tests/signing/bad/bad_sign.ocx
version https://git-lfs.github.com/spec/v1
oid sha256:bc788b4f7b8b8f9776ddd98bbd1418e79175d2ae4ef027a4a3bfa7ae6f3de4c5
size 511456
